<resources>
    <string name="app_name">Exchange this</string>
    <string name="mobile_num_hint_text">Номер телефона</string>
    <string name="password_hint_text">Пароль</string>
    <string name="login_text_btn">Вход</string>
    <string name="forget_password_text">Забыли пароль?</string>
    <string name="sign_up_button_text">Регистрация</string>
    <string name="email_hint_text">Email</string>
    <string name="confirm_password_hint_text">Подтвердите пароль</string>
    <string name="app_name_text">Exchange this</string>
    <string name="app_description_text">Книг должно быть\n много!</string>
    <string name="search_menu_text">Поиск</string>
    <string name="library_menu_text">Каталог</string>
    <string name="favourite_menu_text">Избранное</string>
    <string name="account_menu_text">Профиль</string>
    <string name="account_name_text">Diana Vezhnovets</string>
    <string name="account_nickname">diana_vezhnovets</string>
    <string name="user_rating">0</string>
    <string name="user_rating_text">Средняя \n оценка ваших \n книг</string>
    <string name="user_book_number">0</string>
    <string name="user_book_number_text">Столько книг \n добавлено</string>
    <string name="full_name_text">Полное имя</string>
    <string name="update_text">Обновить</string>
    <string name="category_text">Категории</string>
    <string name="view_all_text">Смотреть все</string>
    <string name="add_book_description">Добавить книгу</string>
    <string name="book_name_text">Название книги</string>
    <string name="delete_my_book_button">Delete my book button</string>
    <string name="book_author_text">Автор книги</string>
    <string name="book_year_text">Год издания</string>
    <string name="book_description_text">Описание книги</string>
    <string name="publish_text">Опубликовал</string>
    <string name="borrow_book_text">Взять книгу</string>
    <string name="new_password_text">Новый пароль</string>
    <string name="text_for_forgotten_password">Пожалуйста, введите email, на который привязан ваш аккаунт, и новый пароль</string>
    <string name="rating">Оценить</string>
    <string name="fiction_text">Художественная литература</string>
    <string name="non_fiction_text">Нехудожественная литература</string>
    <string name="fantasy_text">Фэнтэзи</string>
    <string name="thriller_text">Триллер</string>
    <string name="cook_text">Кулинарные книги</string>
    <string name="drama_text">Драма</string>
    <string name="another_text">Другое</string>
    <string name="choose_category_text">Выберите, пожалуйста, жанр книги:</string>
    <string name="EMAIL_FORMAT_ERROR">Неверный формат для email</string>
    <string name="PASSWORD_EMPTY_ERROR">Введите, пожалуйста, пароль</string>
    <string name="PASSWORD_SHORT_ERROR">Слишком короткий пароль</string>
    <string name="FULL_NAME_EMPTY_ERROR">Введите, пожалуйста, полное имя</string>
    <string name="PHONE_FORMAT_ERROR">Формат: +375(хх)ххх-хх-хх или +375ххххххххх</string>
    <string name="EMAIL_IS_BUSY_ERROR">Данный email уже зарегистрирован</string>
    <string name="EMAIL_IS_EMPTY_ERROR">Аккаунта с данным email не найдено</string>
    <string name="NOT_SUCCESS_LOGIN">Ошибка входа! Проверьте логин и пароль</string>
    <string name="TITLE_EMPTY_ERROR">Введите, пожалуйста, название книги</string>
    <string name="AUTHOR_EMPTY_ERROR">Введите, пожалуйста, автора книги</string>
    <string name="YEAR_EMPTY_ERROR">Введите, пожалуйста, корректный год издания</string>
    <string name="DESCRIPTION_EMPTY_ERROR">Введите, пожалуйста, описание книги</string>
    <string name="LOGIN">Вход</string>
    <string name="SIGN_UP">Регистрация</string>
    <string name="EMAIL_KEY">USER EMAIL</string>
    <string name="STRING_DEFAULT_VALUE">No value</string>
    <string name="DOUBLE_DEFAULT">0.0</string>
    <string name="EMPTY"> </string>
    <string name="PASSWORD_KEY">USER PASSWORD</string>
    <string name="TITLE">title</string>
    <string name="MY_BOOK_NULL">У Вас нет ни одной книги, пришло время добавить первую книгу</string>
    <string name="BOOK_NULL">К сожалению, список книг пуст. Станьте первыми, кто добавит книгу!</string>
    <string name="FAVOURITE_NULL">"У Вас нет ни одной избранной книги, пришло время добавить первую книгу"</string>
    <string name="CATEGORY_NULL">"Книги в данной категории не найдены"</string>
    <string name="CATEGORY_KEY">category</string>
    <string name="PUBLISHER_NAME">publisher name</string>
    <string name="PUBLISHER_PHONE">publisher phone</string>
    <string name="COUNTER_KEY">book counter</string>
    <string name="RATING_KEY">rating</string>
</resources>