<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_270"
            android:background="@color/background_white"
            android:padding="@dimen/dimen_20">

            <ImageView
                android:id="@+id/myBookImage"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_book_with_marker_svgrepo_com" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_20"
            android:orientation="vertical"
            android:padding="@dimen/dimen_20">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dimen_10"
                android:hint="@string/book_name_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/myBookName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:drawablePadding="@dimen/dimen_10"
                    android:imeOptions="actionNext"
                    android:textColor="@color/text" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dimen_10"
                android:hint="@string/book_author_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/myBookAuthor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:drawablePadding="@dimen/dimen_10"
                    android:imeOptions="actionNext"
                    android:textColor="@color/text" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dimen_10"
                android:hint="@string/book_year_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/myBookYear"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:drawablePadding="@dimen/dimen_10"
                    android:imeOptions="actionNext"
                    android:textColor="@color/text" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dimen_10"
                android:hint="@string/book_description_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/myBookDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:drawablePadding="@dimen/dimen_10"
                    android:imeOptions="actionDone"
                    android:textColor="@color/text" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dimen_10"
                android:layout_marginVertical="@dimen/dimen_10"
                android:text="@string/choose_category_text"
                android:textColor="@color/text"
                android:textSize="@dimen/dimen_18_sp" />

            <Button
                android:id="@+id/fiction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_5"
                android:background="@drawable/category_inactive"
                android:text="@string/fiction_text"
                android:textColor="@color/text"
                android:textSize="@dimen/dimen_14_sp" />

            <Button
                android:id="@+id/nonFiction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_5"
                android:background="@drawable/category_inactive"
                android:text="@string/non_fiction_text"
                android:textColor="@color/text"
                android:textSize="@dimen/dimen_14_sp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_5">

                <Button
                    android:id="@+id/fantasy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/category_inactive"
                    android:text="@string/fantasy_text"
                    android:textColor="@color/text"
                    android:textSize="@dimen/dimen_14_sp" />

                <Button
                    android:id="@+id/thriller"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimen_20"
                    android:layout_toEndOf="@id/fantasy"
                    android:background="@drawable/category_inactive"
                    android:text="@string/thriller_text"
                    android:textColor="@color/text"
                    android:textSize="@dimen/dimen_14_sp" />

            </RelativeLayout>

            <Button
                android:id="@+id/cook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_5"
                android:background="@drawable/category_inactive"
                android:text="@string/cook_text"
                android:textColor="@color/text"
                android:textSize="@dimen/dimen_14_sp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_5">

                <Button
                    android:id="@+id/drama"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/category_inactive"
                    android:text="@string/drama_text"
                    android:textColor="@color/text"
                    android:textSize="@dimen/dimen_14_sp" />

                <Button
                    android:id="@+id/another"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimen_20"
                    android:layout_toEndOf="@id/drama"
                    android:background="@drawable/category_inactive"
                    android:text="@string/another_text"
                    android:textColor="@color/text"
                    android:textSize="@dimen/dimen_14_sp" />

            </RelativeLayout>

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:indeterminate="true"
                android:visibility="invisible" />

            <Button
                android:id="@+id/addBookButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_5"
                android:background="@drawable/button_shape"
                android:backgroundTint="@color/button_color"
                android:text="@string/add_book_description"
                android:visibility="visible" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>