<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_270"
            android:background="@color/background_white"
            android:padding="@dimen/dimen_20">

            <ImageView
                android:id="@+id/accountImage"
                android:layout_width="@dimen/dimen_100"
                android:layout_height="@dimen/dimen_100"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_undraw_female_avatar_w3jk" />

            <TextView
                android:id="@+id/accountFullName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/dimen_10"
                android:layout_toEndOf="@id/accountImage"
                android:fontFamily="@font/abril_fatface"
                android:includeFontPadding="false"
                android:text="@string/account_name_text"
                android:textSize="@dimen/dimen_20_sp" />

            <TextView
                android:id="@+id/emailName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/accountFullName"
                android:layout_marginStart="@dimen/dimen_10"
                android:layout_toEndOf="@id/accountImage"
                android:includeFontPadding="false"
                android:text="di.vezhnovets@mail.ru"
                android:textSize="@dimen/dimen_14_sp" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_minus_100"
            android:padding="@dimen/dimen_20">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="@dimen/dimen_0"
                android:layout_height="@dimen/dimen_180"
                android:layout_margin="@dimen/dimen_10"
                android:layout_weight="1"
                app:cardBackgroundColor="@color/background_white"
                app:cardElevation="@dimen/dimen_10">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="@dimen/dimen_5">

                    <ImageView
                        android:layout_width="@dimen/dimen_100"
                        android:layout_height="@dimen/dimen_100"
                        android:layout_centerHorizontal="true"
                        android:src="@drawable/ic_undraw_for_review_eqxk" />

                    <TextView
                        android:id="@+id/userRating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:includeFontPadding="false"
                        android:text="@string/user_rating"
                        android:textSize="@dimen/dimen_50_sp" />

                    <TextView
                        android:id="@+id/userRatingText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/userRating"
                        android:layout_centerHorizontal="true"
                        android:includeFontPadding="false"
                        android:text="@string/user_rating_text"
                        android:textSize="@dimen/dimen_20_sp" />

                </RelativeLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="@dimen/dimen_0"
                android:layout_height="@dimen/dimen_180"
                android:layout_margin="@dimen/dimen_10"
                android:layout_weight="1"
                app:cardBackgroundColor="@color/background_white"
                app:cardElevation="@dimen/dimen_10">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="@dimen/dimen_5">

                    <ImageView
                        android:layout_width="@dimen/dimen_100"
                        android:layout_height="90dp"
                        android:layout_centerHorizontal="true"
                        android:src="@drawable/ic_undraw_bibliophile_re_xarc" />

                    <TextView
                        android:id="@+id/userBookNumber"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:includeFontPadding="false"
                        android:text="@string/user_book_number"
                        android:textSize="50sp" />

                    <TextView
                        android:id="@+id/userBookNumberText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/userBookNumber"
                        android:layout_centerHorizontal="true"
                        android:includeFontPadding="false"
                        android:text="@string/user_book_number_text"
                        android:textAlignment="center"
                        android:textSize="@dimen/dimen_20_sp" />

                </RelativeLayout>

            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_minus_40"
            android:orientation="vertical"
            android:padding="@dimen/dimen_20">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dimen_10"
                android:hint="@string/full_name_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fullNameRefactor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:drawableStart="@drawable/ic_baseline_person_24"
                    android:drawablePadding="@dimen/dimen_10"
                    android:text="@string/account_name_text" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dimen_10"
                android:hint="@string/mobile_num_hint_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/phoneRefactor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:drawableStart="@drawable/ic_baseline_phone_24"
                    android:drawablePadding="@dimen/dimen_10"
                    android:text="@string/account_name_text" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dimen_10"
                android:hint="@string/password_hint_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passwordRefactor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:drawableStart="@drawable/ic_baseline_person_pin_24"
                    android:drawablePadding="@dimen/dimen_10"
                    android:text="@string/account_name_text" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/refactorButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/button_color"
                android:text="@string/update_text" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>